# SpaceKey

client/iOS/: .gitignore  README.md
client/iOS/Configuration/: HomeAssistant.debug.xcconfig  HomeAssistant.xcconfig
client/iOS/Configuration/Entitlements/: App-catalyst.entitlements  App-ios.entitlements
client/iOS/HomeAssistant.xcodeproj/: project.pbxproj
client/iOS/Sources/App/: AppDelegate.swift
client/web/: .yarnrc.yml  README.md  package.json  pyproject.toml
client/web/.github/workflows/: codeql-analysis.yml
client/web/deploy/: install_permission_web_service.sh  permission_web_server.py
client/web/gallery/src/: ha-demo-options.ts  ha-gallery.ts
client/web/script/: build_frontend_test
client/web/src/: types.ts
client/web/src/components/: ha-absolute-time.ts  ha-alert.ts  ha-areas-display-editor.ts  ha-areas-floors-display-editor.ts  ha-check-list-item.ts  (+19 more)
gateway/: .env.example  README.md  pyproject.toml
gateway/deploy/: Dockerfile  docker-compose.yml  install_user_service.sh  permission_web_server.py  postgres_schema.sql
gateway/docs/: ios-client-contract.md
gateway/ios-integration/: PermissionGatewayClient.swift
gateway/permission_gateway/: __init__.py
gateway/permission_gateway/gateway/: __init__.py  activation.py  admin_console.py  admin_summary.py  app.py  config.py  ha_filter.py  ha_registry_sync.py  models.py  policy.py  repository.py  security.py
gateway/tests/: test_admin_summary.py  test_frontend_proxy.py  test_ha_filter.py  test_ha_registry_sync.py  test_permissions_summary.py  test_policy.py  test_security_activation.py
(+283 files in other folders)
