[project]
name = "home-assistant-permission-gateway"
version = "0.1.0"
description = "HA-compatible permission gateway for scoped Home Assistant iOS access"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "qrcode[pil]>=7.4.2",
]

[project.optional-dependencies]
postgres = [
  "asyncpg>=0.29.0",
]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
permission-gateway = "permission_gateway.gateway.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["permission_gateway*"]
